// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Avatar <Avatar /> renders in correct sizes 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 24px;
  height: 24px;
  border: 1px solid #fff;
  border-radius: 24px;
  background-color: indigo03;
  color: white;
  font-size: 1rem;
  line-height: 1;
  vertical-align: middle;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
}

.c0 img {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

<div
  class="c0"
  color="indigo"
  shape="rounded"
  size="24"
>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M22 13a10 10 0 10-16.466 7.62c.01-.062.038-.187.038-.187C6.018 18.493 8.722 17 12 17s5.982 1.493 6.428 3.433c0 0 .027.125.038.188A9.972 9.972 0 0022 13zm-6.141-2l-.41 2a3.484 3.484 0 01-6.899 0l-.409-2a4 4 0 117.718 0z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`components/Avatar <Avatar /> renders on large size by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 40px;
  height: 40px;
  border: 1px solid #fff;
  border-radius: 40px;
  background-color: indigo03;
  color: white;
  font-size: 1rem;
  line-height: 1;
  vertical-align: middle;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 40px;
  height: 40px;
}

.c0 img {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

<div
  class="c0"
  color="indigo"
  shape="rounded"
  size="40"
>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M22 13a10 10 0 10-16.466 7.62c.01-.062.038-.187.038-.187C6.018 18.493 8.722 17 12 17s5.982 1.493 6.428 3.433c0 0 .027.125.038.188A9.972 9.972 0 0022 13zm-6.141-2l-.41 2a3.484 3.484 0 01-6.899 0l-.409-2a4 4 0 117.718 0z"
      fill="currentColor"
    />
  </svg>
</div>
`;
